# docs/swagger.yaml
@@ -295,6 +295,17 @@ definitions:
     - productId
     - quantity
     type: object
+  response.BaseResponse-array_model_CartItem:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/model.CartItem'
+        type: array
+      message:
+        type: string
+      status:
+        type: string
+    type: object
   response.PagingResponse-model_Product:
     properties:
       data:
@@ -469,9 +480,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/model.CartItem'
-            type: array
+            $ref: '#/definitions/response.BaseResponse-array_model_CartItem'
         "400":
           description: Bad Request
           schema:
